tests/parser/define-class.18.bad.error
error: Invalid attribute for define-class
  --> test:4:0
   |
 4 |  (repr :enum)
   |  ^^^^^^^^^^^^ define-class cannot have attributes
 5 |  (define-class (C :a))
   |                ------ while parsing define-class
