tests/parser/define-class.18.bad.coalton
;; BAD: Define Class
(package test-package)

(repr :enum)
(define-class (C :a))
